# RazorDL

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS
datasets/demo_chat/: train.jsonl
datasets/gsm8k/: test.jsonl  train.jsonl
datasets/video_demo/: train.jsonl
datasets/video_demo/video_base64/nframes_8/: 000000.json  000001.json  000002.json  000003.json
docs/: env-troubleshooting.md  testing.md
razordl/: __init__.py
razordl/cli/: CLAUDE.md  __init__.py  ckpt.py  diff.py  init.py  train.py
razordl/core/base/: CLAUDE.md  checkpoint_info.py  config.py  dataloader.py  logging.py  metrics.py  trainer.py  workgroup.py
razordl/core/engine/: CLAUDE.md
razordl/core/engine/common/: __init__.py  flat_config.py  main.py  modelgroup.py  trainer.py  workgroup.py
razordl/core/engine/on_policy_single_model/: _export_profile.py  config.py  dataset.py  main.py  modelgroup.py  workgroup.py
razordl/core/engine/single_model/: _export_profile.py  config.py  dataset.py  lm_workgroup.py  main.py  trainer.py  workgroup.py
razordl/core/export/: CLAUDE.md  __init__.py  ast_utils.py  full_project.py
razordl/ops/: __init__.py  snapshot.py
razordl/ops/distributed/: torch.py  utils.py
razordl/ops/hardware/: CLAUDE.md  __init__.py  cuda.py  device.py
razordl/ops/loss/: __init__.py  distributed.py
razordl/ops/model/: huggingface.py  peft.py  per_token_logp.py  vllm_rollout.py
razordl/ops/model/profiles/: CLAUDE.md  __init__.py  qwen2_vl.py  qwen3.py  qwen3_5.py  registry.py
razordl/ops/multimodal/: __init__.py  split.py  video.py
razordl/ops/parallel/: activation.py  fsdp2.py  sequence_parallel.py
razordl/presets/: CLAUDE.md  __init__.py
razordl/presets/_template/: README.md  __init__.py  _export.py  _export_full.py  default_config.yaml  workgroup.py
razordl/presets/dft/: __init__.py  _export.py  _export_full.py  default_config.yaml  requirements.txt  workgroup.py
razordl/presets/grpo/: CLAUDE.md  README.md  __init__.py  _export.py  _export_full.py  config.py  dataset.py  default_config.yaml  requirements.txt  workgroup.py
razordl/presets/opd/: CLAUDE.md  __init__.py  _export.py  config.py  dataset.py  default_config.yaml  workgroup.py
razordl/presets/sft/: __init__.py  _export.py  _export_full.py  config.py  dataset.py  default_config.yaml  requirements.txt  workgroup.py
razordl/presets/video_embedding/: __init__.py  _export.py  _export_full.py  config.py  dataset.py  default_config.yaml  requirements.txt  workgroup.py
scripts/: sync_requirements.py
